--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
-    "@types/mocha": "^2.2.43",
+    "@types/mocha": "^8.0.2",
     "@types/node": "^8.0.31",
     "chai": "^4.2.0",
     "coffee-script": "^1.12.7",
-    "mocha": "^3.5.3",
+    "mocha": "^8.1.1",
     "source-map-support": "^0.4.18",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
@@ -36,7 +36,7 @@
     "pretest": "npm run compile && npm run tslint",
     "tslint": "tslint dts/* --fix",
     "compile": "coffee --compile --output dist/ lib/ && tsc --noEmit",
-    "test": "node_modules/mocha/bin/_mocha --compilers ts-node/register test/*.ts",
+    "test": "node_modules/mocha/bin/_mocha --require ts-node/register test/*.ts",
     "prepare": "npm run test",
     "dev": "coffee --watch --output dist lib/"
   },
